이메일 중복클릭 차단, 시안성 상향

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -133,7 +133,7 @@ input{
     margin-top:10px;
 }
 
-#find-id, #find-pw{
+#find-id, #find-pw, #insert-btn{
     cursor:pointer;
     margin-left: 10px;
 }
