--- a/src/main/resources/templates/findId.html
+++ b/src/main/resources/templates/findId.html
@@ -13,7 +13,7 @@
 <th:block th:replace="userFind"/>
 <div class="tb-content">
     <div class="content-body">
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" style="position:relative; padding-top: 36px!important;">
+        <main style="position:relative; padding-top: 36px!important;">
             <div style="margin: 100px auto;vertical-align: center;display: flex;flex-direction: column;justify-content: center;align-items: center;">
                 <table>
                     <tr>
