--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,12 +17,11 @@
         <input type="password" class="sign-in" placeholder="Password" id="userPw">
         <input type="button" id="login-btn" value="Login">
     </div>
-    <div id="find-area"><span id="find-id">아이디찾기</span><span id="find-pw">비밀번호찾기</span></div>
+    <div id="find-area"><span id="find-id">아이디찾기</span><span id="find-pw">비밀번호찾기</span><span id="insert-btn">회원가입</span></div>
+
 </div>
 <div id="bg">
-    <div id="insert">
-        <span id="insert-btn">회원가입</span>
-    </div>
+
 </div>
 <script src="/js/main.js" type="module"></script>
 <script src="/js/login.js" type="text/javascript"></script>
