비밀번호찾기 user 유무 판별

--- a/src/main/resources/templates/findPw.html
+++ b/src/main/resources/templates/findPw.html
@@ -29,10 +29,8 @@
             <td><input type="text" placeholder="Email" id="email"></td>
             <td><button id="receive-auth">임시 비밀번호 받기</button></td>
           </tr>
-          <tr>
-            <td><span id="my-pw"></span></td>
-          </tr>
         </table>
+        <span id="my-pw"></span>
       </div>
     </main>
   </div>
